# oc_py

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: OC_PY.yml  ci.yml
docs/exe/NYVir/: minima_pri_final.txt  ny_vir.xlsx  xy_boo.xlsx
docs/exe/NYVir/keplerian/: ny_vir.xlsx  ny_vir_lmfit.ipynb
docs/exe/dd crb/: DD_CrB_Minima.xlsx  DD_CrB_Minima_.xlsx  dd_crb.csv  lin_lite.ipynb  oclmfit.ipynb
src/exe/dd crb/: DD_CrB_Minima_.csv  dd_crb.xlsx  ~$DD_CrB_Minima_.xlsx
src/ocpy/: custom_types.py  data.py  errors.py  model_data.py  model_oc.py  oc.py  oc_lmfit.py  oc_pymc.py  utils.py  visualization.py
tests/: test_data.py  test_oc_pymc.py  test_visualization.py  utils.py
