[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = "--cov=ocpy"
testpaths = [
    "tests",
]


[tool.mypy]
mypy_path = "src"

check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true

warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = false

show_error_codes = true
show_column_numbers = true
pretty = true
error_summary = true

ignore_missing_imports = true
