[metadata]
name = ocpy
description = oc_py is an O-C (Observed - Calculated) fitting application for astronomers.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1b1
author = Barış GÜLER, Özgür BAŞTÜRK, Mohammad NIAEI
author_email = gulerbaris2000@gmail.com; obasturk@ankara.edu.tr; mohammad.niaei@tubitak.gov.tr
keywords = Observed-Calculated
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/etvproject122f358/oc_py
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.26
    pandas>=2.1
    matplotlib>=3.8
    lmfit>=1.3
    pymc>=5.20
    arviz>=0.17
    pytensor>=2.19
    corner>=2.2
    openpyxl>=3.1
    typing_extensions>=4.8; python_version < "3.13"
python_requires = >=3.11,<3.15
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox
docs =
    sphinx
    furo

[options.package_data]
ocpy =
    py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401
